Add new static layout for HomePage

--- a/frontend/assets/css/App.css
+++ b/frontend/assets/css/App.css
@@ -11861,7 +11861,7 @@ textarea.form-control-lg {
 }
 body {
   font-family: "Lato", sans-serif;
-  background: #e0e3eb;
+  background: #e8edf3;
 }
 
 #root {
