--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,17 +1,18 @@
 $primary: #00275a;
 $secondary: #146ca8;
-$warning: #ffc107;
 $success: #28a745;
-$danger: #dc3545;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-$background-gray: #e0e3eb;
+$background-blue-gray: #e8edf3;
+$background-gray: #f2f4f6;
 $card-gray: #f2f4f7;
+$moderate: #fd7e14;
+$accent: #fad749;
 
 body {
   font-family: "Lato", sans-serif;
-  background: $background-gray;
+  background: $background-blue-gray;
 }
 
 #root {
