--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -10,12 +10,12 @@ $success: #28a745;
   $success: $success
 );
 
-$background-blue-gray: #e8edf3;
-$background-gray: #f2f4f6;
+$bg-blue-gray: #e8edf3;
+$bg-gray: #f2f4f6;
 
 body {
   font-family: "Lato", sans-serif;
-  background: $background-blue-gray;
+  background: $bg-blue-gray;
 }
 
 #root {
