--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,17 +1,10 @@
-@use "sass:color";
-
-$primary: #00275a;
-$secondary: #146ca8;
-$success: #28a745;
+@use "./styles/variables" as *;
 
 @use "../node_modules/bootstrap/scss/bootstrap" with (
   $primary: $primary,
   $secondary: $secondary,
   $success: $success
 );
-
-$bg-blue-gray: #e8edf3;
-$bg-gray: #f2f4f6;
 
 body {
   font-family: "Lato", sans-serif;
@@ -24,6 +17,10 @@ body {
   flex-direction: column;
 }
 
+.w-10 {
+  width: 10% !important;
+}
+
 .w-20 {
   width: 20% !important;
 }
@@ -34,4 +31,8 @@ body {
 
 .min-h-70vh {
   min-height: 70vh;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
