--- a/frontend/src/components/CountriesManagement/CountriesManagement.scss
+++ b/frontend/src/components/CountriesManagement/CountriesManagement.scss
@@ -1,3 +1,12 @@
 .page-select {
   width: 80px;
 }
+
+.country-name-cell {
+  min-width: 120px !important;
+}
+
+.actions-cell {
+  width: 15% !important;
+  min-width: 120px !important;
+}
