--- a/frontend/src/components/BachelorProgramsManagement/BachelorProgramsManagement.scss
+++ b/frontend/src/components/BachelorProgramsManagement/BachelorProgramsManagement.scss
@@ -1,3 +1,12 @@
 .program-name-cell {
-  max-width: 200px;
+  max-width: 200px !important;
+}
+
+.country-name-cell {
+  min-width: 140px !important;
+}
+
+.actions-cell {
+  width: 15% !important;
+  min-width: 120px !important;
 }
