--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 $primary: #00275a;
 $secondary: #146ca8;
 $success: #28a745;
-$accent: #fad749;
+$accent-yellow: #fad749;
 $bg-blue-gray: #e8edf3;
 $bg-gray: #f2f4f6;
 $hover-blue-light: #d0e2ee;
